# grpcDemo

grpcClient/: CMakeLists.txt  color.h  mainClient.cpp  make_proto.sh
grpcClient/stream_proto/: stream.proto
grpcClient/stream_proto/proto/: stream.grpc.pb.cc
grpcServer/: CMakeLists.txt  color.h  mainServer.cpp  make_proto.sh
grpcServer/server_proto/: grpcS.proto
grpcServer/server_proto/proto/: grpcS.grpc.pb.cc  grpcS.grpc.pb.h  grpcS.pb.cc  grpcS.pb.h
grpcServer/stream_proto/: stream.proto
grpcServer/stream_proto/proto/: stream.grpc.pb.h  stream.pb.cc  stream.pb.h
test/: CMakeCache.txt  CMakeLists.txt  Makefile  Mytesst.cpp  Person.pb.cc  Person.pb.h  Person.proto  cmake_install.cmake
